Fix API related listing issue
