# gateway/gateway-controller/api/openapi.yaml
@@ -1236,6 +1236,9 @@ components:
           type: string
           format: uuid
           example: 550e8400-e29b-41d4-a716-446655440000
+        identifier:
+          type: string
+          example: weather-api-v1.0
         name:
           type: string
           example: weather-api
@@ -1459,6 +1462,9 @@ components:
           type: string
           format: uuid
           example: 550e8400-e29b-41d4-a716-446655440000
+        identifier:
+          type: string
+          example: mcp-proxy-1-v1.0
         name:
           type: string
           example: mcp-proxy-1
